--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -26,40 +26,14 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <androidx.cardview.widget.CardView
-            android:id="@+id/btnLogout"
+        <ImageView
+            android:id="@+id/btnSetting"
             android:layout_alignParentEnd="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            app:cardCornerRadius="12dp"
-            android:layout_marginVertical="5dp"
-            app:cardElevation="4dp"
-            android:layout_marginEnd="10dp"
-            android:outlineSpotShadowColor="@color/colorDarkRed"
-            android:outlineAmbientShadowColor="@color/colorDarkRed"
-            tools:targetApi="p">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:paddingVertical="10dp"
-                android:paddingHorizontal="20dp">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_logout"
-                    android:tint="@color/colorRed"
-                    />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/logout"
-                    android:textColor="@color/colorDarkRed"
-                    android:paddingStart="5dp"/>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
+            android:src="@drawable/ic_setting"
+            android:layout_marginHorizontal="15dp"
+            android:layout_centerVertical="true"/>
     </RelativeLayout>
 
     <LinearLayout
@@ -123,8 +97,7 @@
                             android:layout_height="wrap_content"
                             android:src="@drawable/ic_tepav_control"
                             android:layout_marginEnd="6dp"
-                            android:tint="@color/colorBlack"
-                            android:id="@+id/btnSetting"/>
+                            android:tint="@color/colorBlack"/>
                         <TextView
                             android:textAlignment="center"
                             android:layout_width="match_parent"
