--- a/app/src/main/res/layout/activity_status_packet.xml
+++ b/app/src/main/res/layout/activity_status_packet.xml
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Paket Kamu"
-            android:fontFamily="@font/ubuntu_bold"
+            android:fontFamily="@font/mulibold"
             android:textColor="@color/colorBlack"
             android:textSize="18sp"
             android:layout_centerHorizontal="true"/>
