--- a/app/src/main/res/layout/activity_packet.xml
+++ b/app/src/main/res/layout/activity_packet.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -29,9 +29,9 @@
             android:layout_centerHorizontal="true"/>
     </RelativeLayout>
 
-
-
     <LinearLayout
+        android:id="@+id/contentListPacket"
+        android:layout_below="@id/tbAllPacket"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -58,11 +58,11 @@
             android:visibility="gone"/>
     </LinearLayout>
 
+    <ProgressBar
+        android:id="@+id/pbListPacket"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true" />
 
-
-
-
-
-
-
-</LinearLayout>
+</RelativeLayout>
