--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -36,18 +36,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_gravity="center"
         android:columnCount="2"
         android:rowCount="1">
 
 
         <LinearLayout
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
             android:orientation="vertical"
             android:layout_gravity="center">
             <androidx.cardview.widget.CardView
-                android:layout_width="170dp"
+                android:layout_width="180dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="12dp"
                 android:layout_marginVertical="15dp"
@@ -106,15 +103,11 @@
 
 
         <LinearLayout
-
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_gravity="center">
+            android:orientation="vertical">
             <androidx.cardview.widget.CardView
                 android:layout_columnWeight="1"
                 android:layout_rowWeight="1"
-                android:layout_width="170dp"
+                android:layout_width="180dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="12dp"
                 android:layout_marginVertical="15dp"
