--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -187,6 +187,7 @@
                                                 android:textColor="@color/colorBlack"
                                                 android:fontFamily="@font/mulibold"
                                                 android:layout_marginBottom="5dp"
+                                                android:layout_marginHorizontal="11dp"
                                                 android:textSize="12sp"/>
                                             <androidx.cardview.widget.CardView
                                                 android:id="@+id/btnUnlockFrontDoor"
@@ -278,7 +279,7 @@
                                                 android:layout_width="wrap_content"
                                                 android:layout_height="wrap_content"
                                                 android:layout_gravity="center"
-                                                android:text="Pintu \nDepan"
+                                                android:text="Pintu \nBelakang"
                                                 android:textAlignment="center"
                                                 android:textColor="@color/colorBlack"
                                                 android:fontFamily="@font/mulibold"
