--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -30,91 +30,148 @@
             android:layout_centerHorizontal="true"/>
     </RelativeLayout>
 
-    <GridLayout
-        android:id="@+id/gridSetting"
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@id/tbSetting"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:columnCount="2"
-        android:rowCount="1">
-
-
+        android:layout_marginBottom="30dp">
         <LinearLayout
-            android:orientation="vertical"
-            android:layout_gravity="center">
-            <androidx.cardview.widget.CardView
-                android:layout_width="180dp"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="12dp"
-                android:layout_marginVertical="15dp"
-                app:cardCornerRadius="12dp"
-                app:cardElevation="8dp"
-                android:outlineSpotShadowColor="@color/colorPrimaryDark"
-                android:outlineAmbientShadowColor="@color/colorPrimaryDark"
-                tools:targetApi="p">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:padding="15dp"
-                    android:orientation="vertical">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-
-                        android:orientation="horizontal">
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/ic_wifi"
-                            android:tint="@color/colorPrimary"/>
-                        <TextView
-                            android:layout_gravity="center"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/wifi_status"
-                            android:textAlignment="center"
-                            android:layout_marginStart="12dp"
-                            style="@style/textDefault"/>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_marginTop="10dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal">
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="SSID: "/>
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/textSSID"
-                            style="@style/textBold"
-                            android:text="@string/wifi_name"/>
-                    </LinearLayout>
-
-                </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
-        </LinearLayout>
-
-
-        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:orientation="vertical">
+
+            <GridLayout
+                android:id="@+id/gridSetting"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:columnCount="2"
+                android:rowCount="1">
+
+
+                <LinearLayout
+                    android:orientation="vertical">
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="180dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="12dp"
+                        android:layout_marginVertical="15dp"
+                        app:cardCornerRadius="12dp"
+                        app:cardElevation="8dp"
+                        android:outlineSpotShadowColor="@color/colorPrimaryDark"
+                        android:outlineAmbientShadowColor="@color/colorPrimaryDark"
+                        tools:targetApi="p">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:padding="15dp"
+                            android:orientation="vertical">
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+
+                                android:orientation="horizontal">
+                                <ImageView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:src="@drawable/ic_wifi"
+                                    android:tint="@color/colorPrimary"/>
+                                <TextView
+                                    android:layout_gravity="center"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="@string/wifi_status"
+                                    android:textAlignment="center"
+                                    android:layout_marginStart="12dp"
+                                    style="@style/textDefault"/>
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_marginTop="10dp"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:orientation="horizontal">
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="SSID: "/>
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:id="@+id/textSSID"
+                                    style="@style/textBold"
+                                    android:text="@string/wifi_name"/>
+                            </LinearLayout>
+
+                        </LinearLayout>
+
+                    </androidx.cardview.widget.CardView>
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:orientation="vertical">
+                    <androidx.cardview.widget.CardView
+                        android:layout_columnWeight="1"
+                        android:layout_rowWeight="1"
+                        android:layout_width="180dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="12dp"
+                        android:layout_marginVertical="15dp"
+                        app:cardCornerRadius="12dp"
+                        app:cardElevation="8dp"
+                        android:outlineSpotShadowColor="@color/colorDarkYellow"
+                        android:outlineAmbientShadowColor="@color/colorDarkYellow"
+                        tools:targetApi="p">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:padding="15dp"
+                            android:orientation="vertical">
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:orientation="horizontal">
+                                <ImageView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:src="@drawable/ic_recent"/>
+                                <TextView
+                                    android:layout_gravity="center"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="@string/last_connect"
+                                    android:textAlignment="center"
+                                    android:layout_marginStart="12dp"
+                                    style="@style/textDefault"/>
+                            </LinearLayout>
+
+                            <TextView
+                                android:id="@+id/textLastConn"
+                                android:layout_marginTop="10dp"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:text="@string/time_last"
+                                style="@style/textBold"/>
+
+                        </LinearLayout>
+
+                    </androidx.cardview.widget.CardView>
+                </LinearLayout>
+            </GridLayout>
+
             <androidx.cardview.widget.CardView
-                android:layout_columnWeight="1"
-                android:layout_rowWeight="1"
-                android:layout_width="180dp"
+                android:layout_below="@id/gridSetting"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="12dp"
                 android:layout_marginVertical="15dp"
                 app:cardCornerRadius="12dp"
-                app:cardElevation="8dp"
-                android:outlineSpotShadowColor="@color/colorDarkYellow"
-                android:outlineAmbientShadowColor="@color/colorDarkYellow"
+                app:cardElevation="12dp"
+                android:outlineSpotShadowColor="@color/colorGreenLight"
+                android:outlineAmbientShadowColor="@color/colorGreen"
                 tools:targetApi="p">
 
                 <LinearLayout
@@ -129,123 +186,78 @@
                         <ImageView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:src="@drawable/ic_recent"/>
+                            android:src="@drawable/ic_time_sand"/>
                         <TextView
                             android:layout_gravity="center"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/last_connect"
+                            android:text="@string/sterilize_duration_minutes"
                             android:textAlignment="center"
                             android:layout_marginStart="12dp"
                             style="@style/textDefault"/>
                     </LinearLayout>
 
-                    <TextView
-                        android:id="@+id/textLastConn"
-                        android:layout_marginTop="10dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:text="@string/time_last"
-                        style="@style/textBold"/>
-
-                </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
-        </LinearLayout>
-    </GridLayout>
-
-    <androidx.cardview.widget.CardView
-        android:layout_below="@id/gridSetting"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="12dp"
-        android:layout_marginVertical="15dp"
-        app:cardCornerRadius="12dp"
-        app:cardElevation="12dp"
-        android:outlineSpotShadowColor="@color/colorGreenLight"
-        android:outlineAmbientShadowColor="@color/colorGreen"
-        tools:targetApi="p">
-
-        <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="15dp"
-                android:orientation="vertical">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
-                    <ImageView
+                    <LinearLayout
+                        android:layout_margin="10dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_time_sand"/>
-                    <TextView
+                        android:orientation="horizontal"
+                        android:layout_gravity="center_horizontal">
+                        <LinearLayout
+                            android:id="@+id/btnReduceDuration"
+                            android:layout_gravity="center_vertical"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/bg_button"
+                            android:backgroundTint="@color/colorRed">
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:src="@drawable/ic_remove"
+                                android:tint="@color/white"
+                                android:padding="5dp"/>
+                        </LinearLayout>
+
+                        <EditText
+                            android:layout_marginHorizontal="10dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:hint="30"
+                            android:textAlignment="center"
+                            android:id="@+id/inputDuration"/>
+
+                        <LinearLayout
+                            android:id="@+id/btnAddDuration"
+                            android:layout_gravity="center_vertical"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/bg_button"
+                            android:backgroundTint="@color/colorGreenLight">
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:src="@drawable/ic_add"
+                                android:tint="@color/white"
+                                android:padding="5dp"/>
+                        </LinearLayout>
+                    </LinearLayout>
+
+
+                    <Button
                         android:layout_gravity="center"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/sterilize_duration_minutes"
-                        android:textAlignment="center"
-                        android:layout_marginStart="12dp"
-                        style="@style/textDefault"/>
+                        android:text="@string/save"
+                        android:textColor="@color/white"
+                        android:id="@+id/btnSaveSetting"/>
+
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_margin="10dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_gravity="center_horizontal">
-                    <LinearLayout
-                        android:id="@+id/btnReduceDuration"
-                        android:layout_gravity="center_vertical"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/bg_button"
-                        android:backgroundTint="@color/colorRed">
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/ic_remove"
-                            android:tint="@color/white"
-                            android:padding="5dp"/>
-                    </LinearLayout>
+            </androidx.cardview.widget.CardView>
 
-                    <EditText
-                        android:layout_marginHorizontal="10dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:hint="30"
-                        android:textAlignment="center"
-                        android:id="@+id/inputDuration"/>
+        </LinearLayout>
 
-                    <LinearLayout
-                        android:id="@+id/btnAddDuration"
-                        android:layout_gravity="center_vertical"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/bg_button"
-                        android:backgroundTint="@color/colorGreenLight">
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/ic_add"
-                            android:tint="@color/white"
-                            android:padding="5dp"/>
-                    </LinearLayout>
-                </LinearLayout>
-
-
-                <Button
-                    android:layout_gravity="center"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/save"
-                    android:textColor="@color/white"
-                    android:id="@+id/btnSaveSetting"/>
-
-            </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
+    </androidx.core.widget.NestedScrollView>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/btnLogout"
@@ -280,7 +292,7 @@
                 android:paddingStart="5dp"
                 style="@style/textDefault"/>
         </LinearLayout>
-        </androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 
 </RelativeLayout>
