--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,11 +14,10 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:layout_marginHorizontal="30dp"
-            android:paddingVertical="30dp"
             tools:ignore="MissingConstraints">
 
             <LinearLayout
-                android:layout_marginTop="40dp"
+                android:layout_marginVertical="40dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
@@ -42,25 +41,18 @@
                     />
 
                 <TextView
-                    android:maxWidth="300dp"
-                    android:layout_width="250dp"
+                    android:layout_width="match_parent"
+                    android:layout_marginEnd="80dp"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/mulireg"
-                    android:text="Dengan ini, \nPaket kamu sudah aman kok, jadi gak usah risau. Paket kamu juga sudah steril loh, jadi kamu ga perlu takut lagi dengan virus yang hanya datang untuk menyakiti.\n~Tepav app"/>
-            </LinearLayout>
+                    android:text="@string/keterangan_login"/>
 
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:gravity="bottom">
                 <ImageView
+                    android:layout_gravity="center_horizontal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_welcome"
-                    android:layout_marginBottom="20dp"/>
+                    android:layout_marginVertical="50dp"/>
                 <androidx.cardview.widget.CardView
                     android:id="@+id/btnGoogle"
                     android:layout_width="match_parent"
@@ -90,7 +82,6 @@
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
-
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
