--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -52,7 +52,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_welcome"
-                    android:layout_marginVertical="50dp"/>
+                    android:layout_marginTop="40dp"
+                    android:layout_marginBottom="20dp"/>
                 <androidx.cardview.widget.CardView
                     android:id="@+id/btnGoogle"
                     android:layout_width="match_parent"
